--- a/app/views/admin/overview/index.html.erb
+++ b/app/views/admin/overview/index.html.erb
@@ -211,10 +211,10 @@
           <div class="padded">
             <div class="section-title">Quick Links</div>
 
-            <button class="big-button link_div" data-link="<%= "#" %>">
-              <i class="icon-group icon-large"></i>
-              <span class="button-text">New User</span>
-            </button>
+            <!--<button class="big-button link_div" data-link="<%= "#" %>">-->
+              <!--<i class="icon-group icon-large"></i>-->
+              <!--<span class="button-text">New User</span>-->
+            <!--</button>-->
 
             <button class="big-button link_div" data-link="<%= new_admin_widget_path %>">
               <i class="icon-microformats icon-large"></i>
