--- a/app/views/store_mailer/bad_ratings.text.erb
+++ b/app/views/store_mailer/bad_ratings.text.erb
@@ -1,6 +1,6 @@
 Action required ! <%= @store.name %>,
 
-Last 10 ratings' average value is below %30 in <%= @post.url %> .
+Last 10 ratings' average value is below %30 in <%= "http://#{@post.widget.domains.first}#{@post.url}" %> .
 Please check the page to identify problem.
 
 TalkyCloud.com support team
