--- a/app/views/admin/comments/index.html.erb
+++ b/app/views/admin/comments/index.html.erb
@@ -44,16 +44,16 @@
 
             <div class="span2 center link_div" data-link="<%= admin_comments_path(:state => 'agreed') %>">
               <div class="stat-box text-blue">
-                <i class="icon-hand-right icon-large"></i>
-                <span class="count"><%= Comment.where(:state => 'agreed').count %></span>
+                <i class="icon-hand-up icon-large"></i>
+                <span class="count"></span>
                 <span class="stat-text">Agreed</span>
               </div>
             </div>
 
             <div class="span2 center link_div" data-link="<%= admin_comments_path(:state => 'disagreed') %>">
               <div class="stat-box dark-blue">
-                <i class="icon-envelope icon-large"></i>
-                <span class="count"><%= Comment.where(:state => 'disagreed').count %></span>
+                <i class="icon-hand-down icon-large"></i>
+                <span class="count"></span>
                 <span class="stat-text">Disagreed</span>
               </div>
             </div>
