--- a/app/views/admin/secrets/index.html.erb
+++ b/app/views/admin/secrets/index.html.erb
@@ -1,30 +1,35 @@
 <div class="container-fluid">
-<div class="row-fluid">
-  <div class="box">
-  <div class="box-content">
-<h1>Listing secrets</h1>
+  <div class="row-fluid">
+    <div class="span12">
+      <div class="box bordered">
+        <div class="box-header">
+          <i class="icon-key">&nbsp; Listing secrets </i>
 
-<table class="table table-bordered">
-  <tr>
-    <th>Provider</th>
-    <th>Key</th>
-    <th>Secret</th>
-  </tr>
+        </div>
+        <div class="row-fluid padded">
 
-  <% @secrets.each do |secret| %>
-      <tr>
-        <td><%= secret.provider %></td>
-        <td><%= secret.api_key %></td>
-        <td><%= secret.api_secret %></td>
-        <td><%= link_to 'Edit', edit_admin_secret_path(secret) %></td>
-      </tr>
-  <% end %>
-</table>
+          <table class="table table-bordered">
+            <tr>
+              <th>Provider</th>
+              <th>Key</th>
+              <th>Secret</th>
+            </tr>
 
-<br/>
+            <% @secrets.each do |secret| %>
+                <tr>
+                  <td><%= secret.provider %></td>
+                  <td><%= secret.api_key %></td>
+                  <td><%= secret.api_secret %></td>
+                  <td><%= link_to 'Edit', edit_admin_secret_path(secret), :class => "btn" %></td>
+                </tr>
+            <% end %>
+          </table>
 
-<%= link_to 'New Secret', new_admin_secret_path %>
-</div>
-</div>
-</div>
+          <br/>
+
+          <%= link_to 'New Secret', new_admin_secret_path, :class => "btn btn-success" %>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
