--- a/app/views/admin/secrets/_form.html.erb
+++ b/app/views/admin/secrets/_form.html.erb
@@ -1,23 +1,39 @@
-<%= form_for([:admin, @secret]) do |f| %>
-  <% if @secret.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@secret.errors.count, "error") %> prohibited this admin_secret from being saved:</h2>
+<%= render :partial => "shared/errors", :locals => {:target => @user} %>
 
-      <ul>
-      <% @secret.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
+<div class="row-fluid">
+
+
+  <div class="span6">
+    <div class="padded">
+      <div class="section-title">
+        Secret
+      </div>
+      <div class="vpadded">
+            <div class="input  full-width">
+              <%= f.text_field :api_key, :placeholder => 'Api Key' %> <br>
+            </div>
+
+            <div class="input  full-width">
+              <%= f.text_field :api_secret,:placeholder => 'Api Secret' %> <br>
+            </div>
+        <div class="input  full-width">
+          <%= f.text_field :provider, :placeholder => "Provider" %> <br>
+        </div>
+        <div class="input  full-width">
+          <%= f.text_field :environment, :placeholder => "Environment" %> <br>
+        </div>
+        <div class="input  full-width">
+          <%= f.text_field :permission, :placeholder => "Permissions" %>
+        </div>
+
+
+
+
+      </div>
+
     </div>
-  <% end %>
-
-    <%= f.text_field :api_key, :placeholder => 'Api Key' %> <br>
-    <%= f.text_field :api_secret,:placeholder => 'Api Secret' %> <br>
-    <%= f.text_field :provider, :placeholder => "Provider" %> <br>
-    <%= f.text_field :environment, :placeholder => "Environment" %> <br>
-    <%= f.text_field :permission, :placeholder => "Permissions" %>
-
-  <div class="actions">
-    <%= f.submit %>
   </div>
-<% end %>
+</div>
+
+
+
