--- a/app/views/admin/secrets/new.html.erb
+++ b/app/views/admin/secrets/new.html.erb
@@ -1,5 +1,30 @@
-<h1>New admin_secret</h1>
+<div class="container-fluid">
+  <div class="row-fluid">
+    <div class="span12">
+      <div class="box bordered">
+        <div class="box-header">
+          <i class="icon-key"></i> New Secret
+        </div>
+        <%= form_for [:admin, @secret] do |f| %>
+            <%= render :partial => "form", :locals => {:f => f} %>
+            <div class="row-fluid">
+              <div class="span6">
+                <div class="padded">
+                  <div class="vpadded">
+                    <%= f.submit "Create", :class => "btn medium-blue" %> or
+                    <%= link_to "Cancel", admin_secrets_path %>
+                  </div>
+                </div>
+              </div>
+            </div>
 
-<%= render 'form' %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
 
-<%= link_to 'Back', admin_secrets_path %>
+
+
+
+
