--- a/app/views/shared/destroy.js.erb
+++ b/app/views/shared/destroy.js.erb
@@ -1,2 +1,3 @@
-$('#<%= params[:dom_id] %>').remove()
+$('#<%= params[:dom_id] %>').remove();
+$('.<%= params[:dom_id] %>').remove();
 <%= render :partial =>'shared/flashes' %>
