--- a/app/views/admin/overview/index.html.erb
+++ b/app/views/admin/overview/index.html.erb
@@ -231,7 +231,7 @@
               <span class="button-text">Comments</span>
             </button>
 
-            <button class="big-button link_div" data-link="<%= new_admin_user_path %>">
+            <button class="big-button link_div" data-link="<%=  admin_comments_path(:state => 'flagged')  %>">
               <i class="icon-flag icon-large"></i>
               <span class="button-text">Flags</span>
             </button>
