--- a/app/views/admin/widgets/_form.html.erb
+++ b/app/views/admin/widgets/_form.html.erb
@@ -19,7 +19,7 @@
         </div>
 
         <hr>
-        <%= link_to "Connect new domain", "javascript:;", :class => "generate_field", "data-target-class" => "generatable" %>
+        <%= link_to "Connect new sub domain", "javascript:;", :class => "generate_field", "data-target-class" => "generatable" %>
 
 
         <% unless @widget.new_record? %>
