--- a/app/views/shared/_comment_form.html.erb
+++ b/app/views/shared/_comment_form.html.erb
@@ -37,7 +37,7 @@
                   </div>
                 </div>
                 <div class="proceed">
-                  <%= f.submit 'Next', :class => 'btn btn-medium dark-blue login-btn' %>
+                  <%= f.submit 'Next', :class => 'btn btn-medium dark-blue login-btn', :disable_with => "Processing..." %>
                 </div>
 
               </section>
