--- a/app/views/widgets/demo.js.erb
+++ b/app/views/widgets/demo.js.erb
@@ -5,4 +5,6 @@ apply_raty();
 <% else %>
 $('#comment-form-container').html('<%= escape_javascript(comment_form(@comment, comment_posts_url)) %>');
 <% end %>
+<%= render :partial => "shared/flashes" %>
+
 
