--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -149,40 +149,8 @@
     </div>
   </div>
 </div>
-<div style=" height:0px; overflow: hidden;">
-  Along with social media development, it has generated an unprecedented volume of word of mouth surrounding brands
-  and products. Customers who had historically engaged in backyard conversations with neighbors are now turning to
-  online ratings and reviews, blogs, discussion groups and Twitter feeds. Previously private conversations are now
-  publicly visible to potential customers and product managers. From the standpoint of companies, social media can
-  provide valuable customer feedback about their products by allowing them to eavesdrop on these conversations. The
-  desire to listen in on customers' online conversations about products is so pervasive across companies that it has
-  spawned a cottage industry of listening companies that regularly scan online conversations gauge customer sentiment.
-  In recent researches, I found that nearly half of visitors always check for reviews before make buying decisions and
-  %80 would be give up if the read anything bad. People trust other people more than they do what a business tells
-  them. On the other hand, it is not easy to turn on a website into an online community to make sure your visitors get
-  to read and write reviews about the information like products, news articles, blog posts on your pages. I believe
-  that, 3rd party social media integrated commenting - rating system is going to help websites to provide online
-  community for their visitors and improve their awareness. In this report, I am going to state requirements, design
-  and analysis for developing TalkyCloud which is going to be 3rd party online monitoring and rating service for
-  websites and works cross-platform regardless of what programming language or scripts the website is based on.
 
-  The evolution of online feedback and commenting has come a long way; from the old school guestbook to forum and
-  feedback form, and from native platform-dependent commenting systems to today’s 3rd party commenting systems that
-  work cross-platform regardless of what programming language or scripts your site is based on. These 3rd party
-  commenting systems do more than just allowing visitors and readers to drop comments. Most of them support
-  comprehensive comment managing backend, spam control, blacklist/ whitelist management, integration with social
-  media, theme customization and much more.
-
-  TalkyCloud - Interview with Hotel Owner Mustafa, said that the hotel websites have to take steps to encourage
-  customers to write reviews. "I think that feedback on websites such as TatilPlanim can be very useful for hotels but
-  we need to have the confidence that review is posted by a genius customer" he said.
-
-  TatilPlanim Interview with Website Administrator Eren Sandikci, administrator of a hotel website, said that
-  providing a feedback on a website without having control on comments may be dangerous. "I need to be sure that the
-  commenter was really our customer and writing his review. I must be able to access commenters' personal information
-  and delete the comment if it includes abusing language or it is spam message." he said
-</div>
 
 </div>
 <%#= javascript_include_tag "click" %>
-<%= link_to "YCB", new_user_registration_session_path %>
+<%= link_to "Login", admin_path %>
