--- a/app/assets/stylesheets/widget.css
+++ b/app/assets/stylesheets/widget.css
@@ -414,6 +414,9 @@ section#main {
     padding: 0px;
     padding-left: 0px;
     font-size: 1.25em;
+    margin-left: 0px !important;
+    padding-left: 10px;
+    display: inline-table;
 }
 
 .social-links {
