--- a/app/views/home/ping.html.erb
+++ b/app/views/home/ping.html.erb
@@ -1,3 +1,9 @@
+<style>
+  body {
+      padding-left: 0px !important;
+      padding-right: 0px !important;
+  }
+</style>
 <script>
     var iframe;
     var socket = new easyXDM.Socket({
