--- a/app/views/widgets/demo.html.erb
+++ b/app/views/widgets/demo.html.erb
@@ -22,7 +22,7 @@
               </section>
               <i class="icon-comments"></i> <%= "#{@comments.total_count} Comments" %>
               <div class="pull-right">
-                <%= rating_for(@post, :url => rate_posts_path) %>
+                <%= rating_for(@post, :url => rate_posts_path + widget_params("?")) %>
                 <div class="post-error">
                   <%= @object.errors.first[1] if @object == @post && @object.errors.any? %>
                 </div>
@@ -46,10 +46,10 @@
                       <li class="share">Share this discussion on
                         <ul>
                           <li class="twitter">
-                            <%= link_to_with_icon "icon-twitter-sign", '', "#", "data-link" => share_twitter_path(:post_id => @post.id), :class => 'open-win' %>
+                            <%= link_to_with_icon "icon-twitter-sign", '', "#", "data-link" => share_twitter_path(:post_id => @post.id) + widget_params, :class => 'open-win' %>
                           </li>
                           <li class="facebook">
-                            <%= link_to_with_icon "icon-facebook-sign", '', "#", "data-link" => share_facebook_path(:post_id => @post.id), :class => 'open-win' %>
+                            <%= link_to_with_icon "icon-facebook-sign", '', "#", "data-link" => share_facebook_path(:post_id => @post.id) + widget_params, :class => 'open-win' %>
                           </li>
                         </ul>
                       </li>
@@ -119,15 +119,7 @@
             e.preventDefault();
             openWin($(this).attr('data-link'));
         });
-        $('.auth-twitter').on('click', function () {
-            openWin("/auth/twitter")
-        });
-        $('.auth-facebook').on('click', function () {
-            openWin("/auth/facebook?display=popup")
-        });
-        $('.auth-talky').on('click', function () {
-            openWin("/authenticate/login")
-        })
+
 
     })
     function openWin(url) {
