--- a/app/views/admin/overview/set_post.js.erb
+++ b/app/views/admin/overview/set_post.js.erb
@@ -1,1 +1,1 @@
-$('#main').html('<%= escape_javascript(render :template => '/admin/overview/index', :formats => :html) %>');
+$('#main-container').html('<%= escape_javascript(render :template => '/admin/overview/index', :formats => :html) %>');
